<?xml version="1.0"?>
<package>
  <name>loam</name>
  <version>0.0.0</version>

  <description>
    This is a ROS implementation of LOAM for Velodyne multi-beam, as well as actuated 2D laser scanners.
    LOAM is described in the following paper:
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
      Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
  </description>

  <maintainer email="yoshua.nava.chocron@gmail.com">Yoshua Nava</maintainer>

  <license>BSD</license>

  <author email="zhangji@cmu.edu">Ji Zhang</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_catkin</build_depend>
  <build_depend>ecl_time</build_depend>
  
  <run_depend>pcl_catkin</run_depend>
  <run_depend>ecl_time</run_depend>

  <export>
  </export>
</package>
