<?xml version="1.0"?>
<package format="2">
  <name>loam_msgs</name>
  <version>0.0.1</version>
  <description>The loam_msgs package</description>

  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>
  <author email="yoshua@kth.se">Yoshua Nava</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

</package>
